--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,7 +1,10 @@
-body {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
   background-color: #ffe190;
   font-family: "Pangolin", cursive;
 }
