Crie menu dos lanches com preços

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -47,3 +47,32 @@ body {
 .nav a:hover {
   color: rgb(213, 255, 60);
 }
+
+.menu {
+  background-color: #fff;
+  color: #e50021;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.product {
+  max-width: 800px;
+  margin-right: auto;
+  margin-left: auto;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
+.product article {
+  margin: 1em;
+}
+
+.product img {
+  max-width: 200px;
+  max-height: 200px;
+  border-radius: 50%;
+  background-color: #e5b000;
+  box-shadow: 0 0 5px #e50021;
+}
