--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -8,6 +8,7 @@ body {
   background-color: #ffe190;
   font-family: "Pangolin", cursive;
   font-size: 20px;
+  color: #e50021;
 }
 
 .header img {
@@ -26,7 +27,6 @@ body {
 .header h1 {
   font-size: 3em;
   text-align: center;
-  color: #e50021;
 }
 
 .nav ul {
@@ -75,4 +75,21 @@ body {
   border-radius: 50%;
   background-color: #e5b000;
   box-shadow: 0 0 5px #e50021;
+}
+
+.about {
+  background-color: rgb(241, 250, 160);
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
+.about h2 {
+  text-align: center;
+}
+
+.about p {
+  text-align: justify;
+  text-justify: inter-word;
+  text-indent: 1em;
+  padding: 1em;
 }
