--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -83,7 +83,8 @@ body {
   padding-bottom: 1em;
 }
 
-.about h2 {
+.about h2,
+.about h3 {
   text-align: center;
 }
 
@@ -92,4 +93,10 @@ body {
   text-justify: inter-word;
   text-indent: 1em;
   padding: 1em;
+}
+
+.about .map {
+  margin-top: 1em;
+  width: 100%;
+  height: 400px;
 }
