--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+:root {
+  scroll-behavior: smooth;
+}
+
 body {
   background-color: #ffe190;
   font-family: "Pangolin", cursive;
