--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -15,6 +15,13 @@ body {
   color: #e50021;
 }
 
+.container {
+  width: 100%;
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .header img {
   display: block;
   width: 1.2em;
@@ -33,12 +40,15 @@ body {
   text-align: center;
 }
 
+.nav {
+  background-color: #e50021;
+}
+
 .nav ul {
   display: flex;
   justify-content: space-around;
   align-items: center;
   list-style-type: none;
-  background-color: #e50021;
   min-height: 2em;
 }
 
