--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -116,6 +116,15 @@ body {
   height: 400px;
 }
 
+@media (min-width: 1000px) {
+  .about .map {
+    width: 970px;
+    margin-top: 1em;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
 .contact {
   background-color: #374c5a;
   color: #ffffff;
