--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -128,7 +128,10 @@ body {
 .contact {
   background-color: #374c5a;
   color: #ffffff;
-  padding: 1em;
+  padding-top: 1em;
+  padding-left: 1em;
+  padding-right: 1em;
+  padding-bottom: 3em;
 }
 
 .group-form {
@@ -175,6 +178,29 @@ body {
   resize: none;
   width: 100%;
   min-width: 280px;
+}
+
+.delivery {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  z-index: 1000;
+  width: 100%;
+  padding: 2px;
+  background-color: #e74c3c;
+  color: #fff;
+  text-align: center;
+}
+
+.phone a {
+  color: inherit;
+  text-decoration: none;
+  font-size: inherit;
+  font-family: inherit;
+}
+
+.phone img {
+  width: 1em;
 }
 
 .up-arrow {
